cmake_minimum_required(VERSION 3.10)
project(jray)
find_package(PkgConfig)
pkg_check_modules(GTKMM gtkmm-3.0)
set(CMAKE_CXX_STANDARD 11)
set(THREADS_PREFER_PTHREAD_FLAG TRUE)
find_package(Threads)
include_directories(src)
add_subdirectory(src)
add_subdirectory(lib/third-party/googletest)
add_subdirectory(test)
add_subdirectory(lib/third-party/yaml-cpp)
